[package]
name = "http"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.2.9"
readme = "README.md"
documentation = "https://docs.rs/http"
repository = "https://github.com/hyperium/http"
license = "MIT OR Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A set of types for representing HTTP requests and responses.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2021"
# When updating this value, don't forget to also adjust the GitHub Actions config.
rust-version = "1.56.0"

[workspace]
members = [
  ".",
]
exclude = [
  "fuzz",
  "benches"
]

[dependencies]
bytes = { path = "../bytes" }
fnv = "1"
itoa = "1"

[dev-dependencies]
indexmap = "1"
quickcheck = "0.9"
rand = { path = "../rand" }
seahash = "3"
serde = "1"
serde_json = { path = "../json" }
doc-comment = "0.3"
