[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytes = { path = "../bytes" }
fnv = "1"
itoa = "1"
http = { path = ".." }
indexmap = "2"
quickcheck = "0.9"
rand = { path = "../rand" }
seahash = "3"
serde = "1"
serde_json = "1"
criterion = "0.3"

[[bench]]
name = "header_map"
path = "src/header_map/mod.rs"

[[bench]]
name = "header_name"
path = "src/header_name.rs"

[[bench]]
name = "header_name2"
path = "src/header_name2.rs"
harness = false

[[bench]]
name = "header_value"
path = "src/header_value.rs"

[[bench]]
name = "method"
path = "src/method.rs"

[[bench]]
name = "uri"
path = "src/uri.rs"
